# homework8

./: commands.py  config.ini  connect.py  consumer_email.py  consumer_sms.py  export_authors.py  export_quotes.py  main.py  models.py  producer.py  pyproject.toml
