[tool.poetry]
name = "homework8"
version = "0.1.0"
description = ""
authors = ["gorandalex <andrii.gorobets@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = {extras = ["srv", "tls"], version = "^4.3.3"}
mongoengine = "^0.25.0"
dnspython = "^2.3.0"
redis = "^4.5.1"
pika = "^1.3.1"
faker = "^17.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
